[project]
name = "Hermes"
version = "2.0.0"
description = "A fast and efficient message delivery system designed with scalability and flexibility in mind."
authors = ["DarthTigerson thomas.bonnici@icloud.com"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["fastapi", "message delivery", "scalable", "web service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/DarthTigerson/Hermes"
repository = "https://github.com/DarthTigerson/Hermes"
documentation = "https://github.com/DarthTigerson/Hermes#readme"

dependencies = [
    "alembic==1.11.2",
    "fastapi==0.100.0",
    "Jinja2==3.1.2",
    "oauthlib==3.2.0",
    "paramiko==2.9.3",
    "passlib==1.7.4",
    "pydantic==2.0.3",
    "pydantic-core==2.3.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "PyJWT==2.3.0",
    "requests==2.25.1",
    "SQLAlchemy==2.0.19",
    "uvicorn==0.15.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0"
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
